Fix spacing of Parent Category Template's main content from navigation bar

--- a/wp-content/themes/neonsunset/source/scss/_containers.scss
+++ b/wp-content/themes/neonsunset/source/scss/_containers.scss
@@ -33,7 +33,7 @@ iframe {
 }
 
 .author > main,
-body:not(.page-home) > main {
+.page-template-default:not(.page-home) > main {
   margin-top: $navigation-height + 2 * $space-horizontal + $space-vertical;
 }
 
